# datapond

./: Cargo.toml  README.md
datapond-derive/: Cargo.toml
datapond-derive/src/: lib.rs
datapond-derive/tests/: test.rs
datapond-derive/tests/fail/: arg_mismatch.rs  arg_mismatch.stderr  kwargs.rs  kwargs.stderr
datapond-derive/tests/pass/: example1.rs  kwargs.rs  missing_args.rs  negation.rs  simple1.rs  transitive_closure.rs
datapond-macro/: Cargo.toml
datapond-macro/src/: lib.rs
examples/: generate_skeleton.rs
src/: ast.rs  data_structures.rs  datalog.rs  generator.rs  lib.rs  parser.rs  typechecker.rs
src/generator_new/: ast.rs  encode.rs  mod.rs  to_tokens.rs
src/parser/: ast.rs  mod.rs
tests/: cspa_rules.rs  flow_sensitive_equality_rules.rs  naive_rules.rs
