[package]
name = "datapond"
version = "0.1.0"
authors = ["lqd"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.0.0"
syn = { version = "1.0.8", features = ["extra-traits"] }
proc-macro2 = { version = "1.0.6", features = ["span-locations"] }
quote = "1.0.2"
log = "0.4.8"

[dev-dependencies]
datafrog = "2.0.0"
pretty_assertions = "0.6.1"
